--- a/.gitignore
+++ b/.gitignore
@@ -3,9 +3,10 @@
 __pycache__
 /saves/
 /data/savedata.json
-/posición de las estrellas.txt
-/test.py
 /build/
 /data/favicon.ico
 /installer.py
 /exports/
+/setup.py
+/install.nsi
+/changelog.txt
